# Mflux-ComfyUI

./: .gitignore  CHANGELOG.MD  README.kr.md  README.md  README_zh.md  RELEASE_NOTES_v2.1.0.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-RESEARCH.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-zimage-turbo/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md  02-zimage-turbo-VERIFICATION.md
.planning/phases/03-seedvr2-upscaling/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Mflux_Comfy/: Mflux_Air.py  Mflux_Core.py  Mflux_Pro.py  Mflux_SeedVR2.py  Mflux_ZImage.py  sam3_mps_fix.py
Mflux_Comfy/utils/: __init__.py  memory_utils.py  tensor_utils.py
docs/: ComfyRegistry.md  ROADMAP.md
tests/: conftest.py  test_config_fallback.py  test_controlnet_models.py  test_depth_node.py  test_downloader_dependency.py  test_fill_node.py  test_metadata_contents.py  test_metadata_vae_tiling.py  test_quicknode_vae_wiring.py  test_redux_node.py  test_upscale_internals.py
workflows/: Mflux SeedVR2 Upscale.json
